# aoc2022

./: .gitignore  CHANGELOG.md  GenMains.hs  Main.hs  README.md  RefList.hs  Test.hs  aoc2022.cabal  cabal.project
Day01/: COMMENTARY.md  Main.hs
Day02/: COMMENTARY.md  Main.hs
Day03/: COMMENTARY.md  Main.hs  check.txt
Day04/: COMMENTARY.md  Main.hs
Day05/: COMMENTARY.md  Main.hs
Day05v2/: Main.hs
Day06/: COMMENTARY.md  Main.hs
Day07/: COMMENTARY.md  Main.hs
Day08/: COMMENTARY.md  Main.hs  check.txt
Day08v0/: Main.hs
Day09/: COMMENTARY.md  Main.hs
Day1/: COMMENTARY.md  Main.hs  Test.hs
Day10/: COMMENTARY.md  Main.hs  check.txt
Day11/: COMMENTARY.md  Main.hs  check.txt
Day12/: COMMENTARY.md  Main.hs
Day13/: COMMENTARY.md  Main.hs  check.txt
Day14/: COMMENTARY.md  Main.hs  check.txt
Day15/: COMMENTARY.md  Main.hs
Day16/: COMMENTARY.md  Main.hs  check.txt
Day17/: COMMENTARY.md  Main.hs
Day18/: COMMENTARY.md  Main.hs  check.txt
Day19/: COMMENTARY.md  Main.hs  check.txt
Day2/: COMMENTARY.md  Main.hs  check.txt
Day20/: COMMENTARY.md  Main.hs  check.txt
Day20v2/: Main.hs  mix.cpp  mix.h
Day21/: COMMENTARY.md  Main.hs  check.txt
Day22/: COMMENTARY.md  Main.hs
Day23/: COMMENTARY.md  Main.hs
Day24/: COMMENTARY.md  Main.hs  check.txt
Day25/: COMMENTARY.md  Main.hs  check.txt
Day3/: COMMENTARY.md  Main.hs
Day4/: COMMENTARY.md  Main.hs
Day5/: Main.hs
Day5v2/: Main.hs
Day6/: Main.hs
Day7/: Main.hs
Day8/: COMMENTARY.md  Main.hs
Day8v0/: Main.hs  lines_of_sight.c  lines_of_sight.h  vis.c  vis.h
Day9/: COMMENTARY.md  Main.hs  check.txt
