cabal-version: >= 1.10

name:           aoc2022
version:        0.0.0.1
category:       Misc
synopsis:       Advent of Code 2022 solutions
author:         Jascha Bakarinow
maintainer:     jascha-bakarinow@web.de
copyright:      Copyright (c) 2022 - 2023 Jascha Bakarinow
license:        GPL-3.0-or-later
license-file:   LICENSE.md
description:
  Solutions to the Advent of Code 2022 coding challenges with my personal commentary

build-type: Simple

test-suite test
  type: exitcode-stdio-1.0

  main-is: Test.hs

  other-modules:
    GenMains,
    Day1.Main

  build-depends:
    base >= 4.14 && < 4.15,
    filepath,
    template-haskell,
    my >= 0.0 && < 0.1,
    regex-pcre-builtin

  default-language: Haskell2010  