cabal-version: >= 1.10

name:           aoc2022
version:        0.0.0.2
category:       Misc
synopsis:       Advent of Code 2022 solutions
author:         Jascha Bakarinow
maintainer:     jascha-bakarinow@web.de
copyright:      Copyright (c) 2022 - 2023 Jascha Bakarinow
license:        GPL-3.0-or-later
license-file:   LICENSE.md
description:
  Solutions to the Advent of Code 2022 coding challenges with my personal commentary

build-type: Simple

extra-source-files:
  Day08v0/lines_of_sight.h,
  Day08v0/lines_of_sight.c

test-suite test
  type: exitcode-stdio-1.0

  main-is: Test.hs

  other-modules:
    GenMains,
    Day01.Main,
    Day02.Main,
    Day03.Main,
    Day04.Main,
    Day05.Main,
    Day05v2.Main,
    Day06.Main,
    Day07.Main,
    Day08.Main,
    Day08v0.Main,
    Day09.Main,
    Day10.Main,
    Day11.Main,
    Day12.Main,
    Day13.Main

  build-depends:
    base >= 4.14 && < 4.15,
    containers,
    array,
    filepath,
    search-algorithms,
    template-haskell,
    my >= 0.0 && < 0.1,
    regex-pcre-builtin

  default-language: Haskell2010

  includes: Day08v0/lines_of_sight.h

  c-sources: Day08v0/lines_of_sight.c